<resources>
    <string name="app_name">Smart Pantry Manager</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="reduce_waste_cook_smart">Reduce Waste. Cook Smart.</string>
    <string name="full_name">Full Name:</string>
    <string name="email_address">Email Address:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="password">Password:</string>
    <string name="logo_image">logo image</string>
    <string name="pantry_pal">PantryPal</string>
    <string name="pantry">Pantry</string>
    <string name="recipes">Recipes</string>
    <string name="settings">Settings</string>
    <string name="my_pantry">My Pantry</string>
    <string name="search_item">Search item</string>
    <string name="milk">Milk</string>
    <string name="_1_l">1</string>
    <string name="unit_">L</string>
    <string name="dairy">Dairy</string>
    <string name="expiring_soon">EXPIRING SOON</string>
    <string name="add_new_item">Add new item</string>
    <string name="eggs">Eggs</string>
    <string name="_12_pcs">12 pcs</string>
    <string name="fridge">Fridge</string>
    <string name="chicken_breast">Chicken Breast</string>
    <string name="_500g">500g</string>
    <string name="meat">Meat</string>
    <string name="tomatoes">Tomatoes</string>
    <string name="_4_pcs">4 pcs</string>
    <string name="produce">Produce</string>
    <string name="grain">Grains</string>
    <string name="_l_kg">1 Kg</string>
    <string name="rice">Rice</string>
    <string name="go_back">Go back</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="category">Category</string>
    <string name="please_select_a_future_date">Please select a future date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="select_date">Select date</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="recipes_for_you">Recipes For You</string>
    <string name="based_on_your_pantry_items">Based on your pantry items</string>
    <string name="omlette">Omelette</string>
    <string name="tomato_amp_cheese_omelette"><![CDATA[Tomato & Cheese Omelette]]></string>
    <string name="_15_min">🕒 15 min</string>
    <string name="_4_4_ingredients_available">✓ 4/4 ingredients available</string>
    <string name="already_have_an_account_signing">Already have an account ? Signing</string>
    <string-array name="category_dropdown_items">
        <item>Produce</item>
        <item>Grains</item>
        <item>Dairy</item>
        <item>Meat</item>
    </string-array>
    <string-array name="unit_dropdown_items">
        <item>Pcs</item>
        <item>L</item>
        <item>Kgs</item>
    </string-array>
</resources>