<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:padding="32dp">

    <ImageView
            android:id="@+id/logo"
            android:layout_width="101dp"
            android:layout_height="74dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/logo_image" app:srcCompat="@drawable/pantry_pal_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/pantry_pal"
            android:textColor="@color/primary"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/app_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/reduce_waste_cook_smart"
            android:textColor="@color/primary"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/full_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/full_name"
            android:textColor="@color/primary"
            android:labelFor="@+id/full_name_form"
            app:layout_constraintTop_toBottomOf="@id/app_slogan"
            app:layout_constraintStart_toStartOf="@id/full_name_form" />

    <EditText
            android:id="@+id/full_name_form"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:autofillHints="" android:background="@drawable/edit_text_border"
            android:inputType="textPersonName"
            android:paddingHorizontal="12dp"
            app:layout_constraintTop_toBottomOf="@id/full_name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email_address"
            android:textColor="@color/primary"
            android:labelFor="@+id/email_form"
            app:layout_constraintTop_toBottomOf="@id/full_name_form"
            app:layout_constraintStart_toStartOf="parent" />

    <EditText
            android:id="@+id/email_form"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:autofillHints="" android:background="@drawable/edit_text_border"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="12dp"
            app:layout_constraintTop_toBottomOf="@id/email_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textColor="@color/primary"
            android:labelFor="@id/password_form"
            app:layout_constraintTop_toBottomOf="@id/email_form"
            app:layout_constraintStart_toStartOf="parent" />

    <EditText
            android:id="@+id/password_form"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_border"
            android:inputType="textPassword"
            android:paddingHorizontal="12dp"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/confirm_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/confirm_password"
            android:textColor="@color/primary"
            android:labelFor="@id/confirm_password_form"
            app:layout_constraintTop_toBottomOf="@id/password_form"
            app:layout_constraintStart_toStartOf="@id/confirm_password_form" />

    <EditText
            android:id="@+id/confirm_password_form"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_border"
            android:inputType="textPassword"
            android:paddingHorizontal="12dp"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/sign_in"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/primary"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_form"
            app:layout_constraintBottom_toTopOf="@+id/signup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.937"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:id="@+id/signup"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="2dp"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>
